<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>tripprogress</class>
 <widget class="QMainWindow" name="tripprogress">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>770</width>
    <height>611</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QTableView" name="souvTable">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>130</y>
      <width>151</width>
      <height>221</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>-10</y>
      <width>781</width>
      <height>91</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>15</pointsize>
     </font>
    </property>
    <property name="text">
     <string>CURRENTLY AT: </string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>100</y>
      <width>61</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Souvenirs:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>690</x>
      <y>20</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Next</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
      <x>690</x>
      <y>50</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Prev</string>
    </property>
   </widget>
   <widget class="QPushButton" name="addCart">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>370</y>
      <width>221</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Add to Cart</string>
    </property>
   </widget>
   <widget class="QTableView" name="cartTable">
    <property name="geometry">
     <rect>
      <x>260</x>
      <y>130</y>
      <width>331</width>
      <height>221</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>260</x>
      <y>100</y>
      <width>47</width>
      <height>13</height>
     </rect>
    </property>
    <property name="text">
     <string>My Cart:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="load">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>20</y>
      <width>371</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>12</pointsize>
     </font>
    </property>
    <property name="text">
     <string>Click to Start Trip</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
      <x>260</x>
      <y>370</y>
      <width>221</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Checkout</string>
    </property>
   </widget>
   <widget class="QPushButton" name="removeCart">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>400</y>
      <width>221</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Remove From Cart</string>
    </property>
   </widget>
   <widget class="QTableView" name="totalView">
    <property name="geometry">
     <rect>
      <x>610</x>
      <y>290</y>
      <width>61</width>
      <height>61</height>
     </rect>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>770</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>load</sender>
   <signal>clicked()</signal>
   <receiver>tripprogress</receiver>
   <slot>onLoadClick()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>47</x>
     <y>84</y>
    </hint>
    <hint type="destinationlabel">
     <x>36</x>
     <y>666</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pushButton</sender>
   <signal>clicked()</signal>
   <receiver>tripprogress</receiver>
   <slot>onNextClick()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>714</x>
     <y>54</y>
    </hint>
    <hint type="destinationlabel">
     <x>660</x>
     <y>697</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>pushButton_2</sender>
   <signal>clicked()</signal>
   <receiver>tripprogress</receiver>
   <slot>onPrevClick()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>729</x>
     <y>78</y>
    </hint>
    <hint type="destinationlabel">
     <x>722</x>
     <y>642</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>onLoadClick()</slot>
  <slot>onNextClick()</slot>
  <slot>onPrevClick()</slot>
 </slots>
</ui>
